<resources>
    <string name="app_name">TimeApp</string>
    <string name="txt_password">Password</string>
    <string name="txt_username">Username</string>
    <string name="login_image_desc">Logo image</string>
    <string name="login">Login</string>
    <string name="btn_register">Register</string>
    <string name="login_image_register">Logo image</string>
    <string name="forgot_password">Forgot the Password?</string>
    <string name="remember_password">Remember Password</string>
    <string name="get_in">Login</string>
    <string name="orr">OR</string>
    <string name="email_address">Email address</string>
    <string name="account_Register">Don t have an account? Register</string>
    <string name="history_of">User history</string>
    <string name="img_logo">User logo image</string>
    <string name="user_profile">User profile</string>
    <string name="is_admin">Im admin</string>
    <string name="entry_btn">Entry</string>
    <string name="leave_btn">Leave</string>
    <string name="comment_txt">Enter any comment</string>
    <string name="history">History</string>
    <string name="entry_history">Entry history</string>
    <string name="report_incidence">Report incidence</string>
    <string name="sign_nav">Sign</string>
    <string name="history_nav">History</string>
    <string name="incidence_nav">Incidence</string>
    <string name="menu_sign">Sign</string>
    <string name="incidences_reported">Incidences Reported</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="message">Message</string>
    <string name="nav_header_subtitle">android.studio@gmail.com</string>
    <string name="incidence_from">From : </string>
    <string name="update_username">Save changes</string>
    <string name="nav_help">Help</string>
    <string name="nav_profile">My profile</string>
    <string name="nav_settings">Settings</string>
    
    <string name="add_department">Add department</string>
    <string name="department_name">Department</string>
    <string name="item_controlpanel">Control Panel</string>

    <string name="department_exists">Department already exists!</string>
    <string name="ok">Ok</string>
</resources>
