<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/nav_sign"
        android:icon="@drawable/ic_send"
        android:title="@string/menu_sign" />
        <item
            android:id="@+id/nav_userHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/history_nav"/>
        <item
            android:id="@+id/nav_incidence"
            android:icon="@drawable/ic_incidence"
            android:title="@string/incidence_nav"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_userprofile"
            android:title="@string/nav_profile"/>
    </group>

</menu>