<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_mobile_navigation"
    app:startDestination="@id/nav_sign">

    <fragment
        android:id="@+id/nav_sign"
        android:name="com.example.timeapp.Views.signFragment"
        android:label="@string/sign_nav"
        tools:layout="@layout/sign_fragment"/>

    <fragment
        android:id="@+id/nav_userHistory"
        android:name="com.example.timeapp.Views.entryHistoryFragment"
        android:label="@string/history_nav" />

    <fragment
        android:id="@+id/nav_incidence"
        android:name="com.example.timeapp.Views.reportIncidenceFragment"
        android:label="@string/incidence_nav" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.timeapp.Views.UserProfileFragment"
        android:label="user_profile"
        tools:layout="@layout/user_profile" />
</navigation>