<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="75dp"
        android:id="@+id/linearLayout1">

        <ImageView
            android:id="@+id/ImgViewLogo"
            android:src="@drawable/iconouser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/login_image_desc"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@id/linearLayout1"
        android:layout_marginTop="75dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtEditEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:importantForAutofill="no"
            android:hint="@string/email_address"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:background="@drawable/background_text_edit"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/txtEditUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:importantForAutofill="no"
            android:hint="@string/txt_username"
            android:gravity="center"
            android:background="@drawable/background_text_edit"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEditPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:background="@drawable/background_text_edit"
            android:hint="@string/txt_password"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linearLayout2"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_register"
            android:text="@string/btn_register"/>

    </LinearLayout>
</RelativeLayout>