<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/messageSubject"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:fontFamily="@font/sriracha"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:hint="@string/comment_txt"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnReportIncidence"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="100dp"
        android:text="@string/report_incidence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fontFamily="@font/sriracha"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageBody"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/login_image_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exclamation" />

    <EditText
        android:id="@+id/messageBody"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        app:fontFamily="@font/sriracha"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/message"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/messageSubject" />

</androidx.constraintlayout.widget.ConstraintLayout>