<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <AnalogClock
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"/>

        <DigitalClock
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/ll1"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:inputType="text"
            android:hint="@string/comment_txt"
            android:importantForAutofill="no"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/entryBtn"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:text="@string/entry_btn"
                android:textSize="20sp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/leaveBtn"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:text="@string/leave_btn"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>