<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/userProfileImg"
            android:layout_width="170dp"
            android:layout_gravity="center"
            android:layout_height="170dp"
            android:src="@drawable/iconouser"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:layout_below="@id/ll1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:text="@string/txt_username" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginLeft="43dp"
                android:background="@drawable/background_text_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp" />

            <ImageView
                android:id="@+id/editIcon1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_edit"
                android:layout_marginLeft="5dp"
                tools:layout_editor_absoluteX="339dp"
                tools:layout_editor_absoluteY="1dp" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:text="@string/email_address"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="43dp"
                android:background="@drawable/background_text_edit"
                android:layout_gravity="left"/>

            <ImageView
                android:id="@+id/editIcon2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_edit"
                android:layout_marginLeft="5dp"
                tools:layout_editor_absoluteX="339dp"
                tools:layout_editor_absoluteY="1dp" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:text="@string/txt_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/background_text_edit"
                android:layout_gravity="left"
                android:layout_marginLeft="43dp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/editIcon3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_edit"
                android:layout_marginLeft="5dp"
                tools:layout_editor_absoluteX="339dp"
                tools:layout_editor_absoluteY="1dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>